--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 board_build.f_cpu = 160000000L
-lib_deps = paulstoffregen/OneWire@^2.3.8, milesburton/DallasTemperature@^4.0.4, bblanchon/ArduinoJson@^7.3.1, arduino-libraries/NTPClient@^3.2.1
+lib_deps = paulstoffregen/OneWire@^2.3.8, milesburton/DallasTemperature@^4.0.4, bblanchon/ArduinoJson@^7.3.1, arduino-libraries/NTPClient@^3.2.1, bogde/HX711@^0.7.5
